# VideoSentimentAnalysis

./: README.md  pyproject.toml  run-training.bat  run-training.sh
video_analysis/: install_ffmpeg.py  requirements.txt  setup.py
video_analysis/testing/: tb_metrics_logging.py
video_analysis/training/: dataset.py  models.py  sagemaker_train.py  train.py  trainer.py  utils.py
video_analysis/utils/: __init__.py  logging.py
